# alchemista

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yml  publish.yml
alchemista/: __init__.py  config.py  field.py  main.py  model.py  mypy.py
examples/: simple_person.py
pydantic_sqlalchemy/: __init__.py  field.py  main.py
tests/: test_pydantic_sqlalchemy.py
tests/field/: test_fields_from.py  test_fields_from_deprecated.py  test_infer_python_type.py  test_make_field.py
tests/func/: test_nonify.py
tests/main/: test_sqlalchemy_to_pydantic.py
tests/model/: test_model_from.py
tests/typing/: test_is_optional.py
