[tool.poetry]
name = "pydantic-sqlalchemy"
version = "0.0.8.post1"
description = "Tools to convert SQLAlchemy models to Pydantic models"
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
importlib-metadata = { version = ">=1.6.0,<4.0.0", python = "<3.8" }
pydantic = "^1.8.1"
python = "^3.6.1"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.812"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
sqlalchemy-utc = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
