[tool.poetry]
name = "pydantic-sqlalchemy"
version = "0.0.8.post1"
description = "Tools to convert SQLAlchemy models to Pydantic models"
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
importlib-metadata = { version = ">=1.6.0,<4.0.0", python = "<3.8" }
pydantic = "^1.8.1"
python = "^3.6.2"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
sqlalchemy-utc = "^0.10.0"
sqlalchemy2-stubs = "^0.0.1-alpha.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
